# avm-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.py  pyproject.toml  requirements.txt  server.json  server.py  setup.sh
.github/workflows/: publish-mcp.yml  test.yml
scripts/: check_version.py
tests/: __init__.py  conftest.py  test_config.py  test_distribution.py  test_imports.py  test_package.py  test_package_essentials.py  test_server.py  test_version.py
