[project]
name = "avm-mcp-server"
version = "0.1.5"
description = "MCP Server for discovering and exploring Azure Verified Modules (AVM)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "requests",
    "pydantic-settings",
    "nest-asyncio",
]
authors = [
    { name = "Stefan Stranger"}
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/stefanstranger/avm-mcp-server"
Repository = "https://github.com/stefanstranger/avm-mcp-server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py", "config.py"]

[project.scripts]
avm-mcp-server = "server:mcp.run"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "packaging>=21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"